# cookiecutter-micropython

./: .pre-commit-config.yaml  README.rst  conf.py  cookiecutter.json
hooks/: pre_gen_project.py
tests/: test_make_cookies.py
{{ cookiecutter.__dirname }}/: LICENSE  README.rst  package.json  pyproject.toml  requirements.txt  {{ cookiecutter.__libname }}.py
{{ cookiecutter.__dirname }}/.github/workflows/: build.yml  release_gh.yml  release_pypi.yml
{{ cookiecutter.__dirname }}/docs/: {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}api.rst{% endif %}  {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}conf.py{% endif %}  {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}examples.rst{% endif %}  {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}index.rst{% endif %}
{{ cookiecutter.__dirname }}/examples/: {{ cookiecutter.__libname }}_simpletest.py
{{ cookiecutter.__dirname }}/micropython_{{ cookiecutter.__libname }}/: __init__.py  i2c_helpers.py  {{ cookiecutter.__libname }}.py
